# CalculatorOnSteroids

./: CMakeLists.txt
include/client/: ClientServerCommunicator.h
include/coreLogic/: Detector.h  ProtectedQueue.h  Writer.h  commsProtocol.h
include/server/: ServerCommunicator.h
src/: messageDebug.cpp
src/client/: AbuseClient.cpp  ClientServerCommunicator.cpp  clientTemp.cpp
src/coreLogic/: Detector.cpp  Writer.cpp  commsProtocol.cpp
src/server/: ServerCommunicator.cpp  serverTemp.cpp
test/: allTest.cpp
test/client/: ClientServerCommunicatorTest.cpp
test/coreLogic/: DetectorTest.cpp  WriterTest.cpp  commsProtocolTest.cpp
test/server/: ServerCommunicatorTest.cpp
